--- a/test-output/index.html
+++ b/test-output/index.html
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyQualificationSkills" class="method navigator-link" hash-for-method="aaa">aaa</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyQualificationSkills" class="method navigator-link" hash-for-method="verifyAddSkill">verifyAddSkill</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -137,9 +137,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="aaa">
-                  </a> <!-- aaa -->
-                  <span class="method-name">aaa</span>
+                  <a name="verifyAddSkill">
+                  </a> <!-- verifyAddSkill -->
+                  <span class="method-name">verifyAddSkill</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -223,20 +223,20 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyLoginWithCorrectCredentials')
 data.setCell(0, 2, 'com.maven.testng.VerifyLoginTest')
-data.setCell(0, 3, 5542);
+data.setCell(0, 3, 13350);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'aaa')
-data.setCell(1, 2, 'com.maven.testng.VerifyQualificationSkills')
-data.setCell(1, 3, 3188);
+data.setCell(1, 1, 'verifyLoginErrorMessage')
+data.setCell(1, 2, 'com.maven.testng.VerifyLoginTest')
+data.setCell(1, 3, 6283);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verifyLoginErrorMessage')
-data.setCell(2, 2, 'com.maven.testng.VerifyLoginTest')
-data.setCell(2, 3, 1717);
+data.setCell(2, 1, 'verifyAddSkill')
+data.setCell(2, 2, 'com.maven.testng.VerifyQualificationSkills')
+data.setCell(2, 3, 2223);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 10 seconds</span>
+              <span class="suite-total-time">Total running time: 21 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -269,25 +269,29 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">verifyLoginErrorMessage</span>
-                <span class="method-start">4503 ms</span>
+                <span class="method-start">13771 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyLoginWithCorrectCredentials</span>
-                <span class="method-start">6222 ms</span>
+                <span class="method-start">20057 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.maven.testng.VerifyQualificationSkills</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">navigateToSkills</span>
+                <span class="method-start">33408 ms</span>
+              </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">aaa</span>
-                <span class="method-start">11765 ms</span>
+                <span class="method-name">verifyAddSkill</span>
+                <span class="method-start">41032 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.maven.testng.VerifyLoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">14954 ms</span>
+                <span class="method-start">43256 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
