--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,24 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b46fba">  <td>21/07/29 13:53:41</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@758705fa]">&gt;&gt;getURL</td> 
+<tr bgcolor="b46fba">  <td>21/07/30 08:23:18</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@758705fa]">&gt;&gt;getURL</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1740826931</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/29 13:53:46</td>   <td>4773</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@758705fa]">verifyLoginErrorMessage</td> 
+<tr bgcolor="b46fba">  <td>21/07/30 08:23:25</td>   <td>6872</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@758705fa]">verifyLoginErrorMessage</td> 
   <td>main@1740826931</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/29 13:53:47</td>   <td>6270</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@758705fa]">verifyLoginWithCorrectCredentials</td> 
+<tr bgcolor="b46fba">  <td>21/07/30 08:23:27</td>   <td>8877</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@758705fa]">verifyLoginWithCorrectCredentials</td> 
   <td>main@1740826931</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/29 13:53:52</td>   <td>10676</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyQualificationSkills.navigateToSkills()[pri:0, instance:com.maven.testng.VerifyQualificationSkills@ebaa6cb]">&gt;&gt;navigateToSkills</td> 
+<tr bgcolor="658a60">  <td>21/07/30 08:23:33</td>   <td>14407</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyQualificationEducation.navigateToEducation()[pri:0, instance:com.maven.testng.VerifyQualificationEducation@ebaa6cb]">&gt;&gt;navigateToEducation</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1740826931</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/29 13:53:55</td>   <td>13935</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationSkills.verifyAddSkill(java.lang.String, java.lang.String)[pri:1, instance:com.maven.testng.VerifyQualificationSkills@ebaa6cb]">verifyAddSkill</td> 
+<tr bgcolor="658a60">  <td>21/07/30 08:23:36</td>   <td>17390</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationEducation.aaa()[pri:0, instance:com.maven.testng.VerifyQualificationEducation@ebaa6cb]">aaa</td> 
   <td>main@1740826931</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/29 13:53:56</td>   <td>14997</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationSkills.verifyAddSkill(java.lang.String, java.lang.String)[pri:1, instance:com.maven.testng.VerifyQualificationSkills@ebaa6cb]">verifyAddSkill</td> 
-  <td>main@1740826931</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/29 13:53:57</td>   <td>16012</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationSkills.verifyAddSkill(java.lang.String, java.lang.String)[pri:1, instance:com.maven.testng.VerifyQualificationSkills@ebaa6cb]">verifyAddSkill</td> 
-  <td>main@1740826931</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/29 13:53:58</td>   <td>17019</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationSkills.verifyAddSkill(java.lang.String, java.lang.String)[pri:1, instance:com.maven.testng.VerifyQualificationSkills@ebaa6cb]">verifyAddSkill</td> 
-  <td>main@1740826931</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/29 13:53:59</td>   <td>18020</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationSkills.verifyAddSkill(java.lang.String, java.lang.String)[pri:1, instance:com.maven.testng.VerifyQualificationSkills@ebaa6cb]">verifyAddSkill</td> 
-  <td>main@1740826931</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/29 13:54:00</td>   <td>19156</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@758705fa]">&lt;&lt;closeBrowser</td> 
+<tr bgcolor="b46fba">  <td>21/07/30 08:23:36</td>   <td>17454</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@758705fa]">&lt;&lt;closeBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1740826931</td>   <td></td> </tr>
 </table>
