--- a/test-output/index.html
+++ b/test-output/index.html
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyQualificationEducation" class="method navigator-link" hash-for-method="aaa">aaa</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyQualificationEducation" class="method navigator-link" hash-for-method="verifyAddEducation">verifyAddEducation</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -137,9 +137,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="aaa">
-                  </a> <!-- aaa -->
-                  <span class="method-name">aaa</span>
+                  <a name="verifyAddEducation">
+                  </a> <!-- verifyAddEducation -->
+                  <span class="method-name">verifyAddEducation</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -223,15 +223,15 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyLoginWithCorrectCredentials')
 data.setCell(0, 2, 'com.maven.testng.VerifyLoginTest')
-data.setCell(0, 3, 5528);
+data.setCell(0, 3, 4887);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'verifyLoginErrorMessage')
 data.setCell(1, 2, 'com.maven.testng.VerifyLoginTest')
-data.setCell(1, 3, 2003);
+data.setCell(1, 3, 1620);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'aaa')
+data.setCell(2, 1, 'verifyAddEducation')
 data.setCell(2, 2, 'com.maven.testng.VerifyQualificationEducation')
-data.setCell(2, 3, 63);
+data.setCell(2, 3, 1113);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
@@ -269,29 +269,29 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">verifyLoginErrorMessage</span>
-                <span class="method-start">6877 ms</span>
+                <span class="method-start">4121 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyLoginWithCorrectCredentials</span>
-                <span class="method-start">8882 ms</span>
+                <span class="method-start">5744 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.maven.testng.VerifyQualificationEducation</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">navigateToEducation</span>
-                <span class="method-start">14412 ms</span>
+                <span class="method-start">10632 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">aaa</span>
-                <span class="method-start">17395 ms</span>
+                <span class="method-name">verifyAddEducation</span>
+                <span class="method-start">13408 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.maven.testng.VerifyLoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">17459 ms</span>
+                <span class="method-start">14522 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
