--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,16 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b46fba">  <td>21/07/31 15:32:11</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@758705fa]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1740826931</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/31 15:32:05</td>   <td>-6122</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@758705fa]">&gt;&gt;getURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1740826931</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/31 15:32:11</td>   <td>-159</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyQualificationEducation.navigateToEducation()[pri:0, instance:com.maven.testng.VerifyQualificationEducation@ebaa6cb]">&gt;&gt;navigateToEducation</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1740826931</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/31 15:32:11</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationEducation.verifyAddEducation()[pri:0, instance:com.maven.testng.VerifyQualificationEducation@ebaa6cb]">verifyAddEducation</td> 
-  <td>main@1740826931</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/31 15:32:09</td>   <td>-2157</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@758705fa]">verifyLoginErrorMessage</td> 
-  <td>main@1740826931</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/31 15:32:10</td>   <td>-963</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@758705fa]">verifyLoginWithCorrectCredentials</td> 
-  <td>main@1740826931</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/31 17:55:15</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@436bc36]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@460741164</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/31 17:54:51</td>   <td>-24179</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@436bc36]">&gt;&gt;getURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@460741164</td>   <td></td> </tr>
+<tr bgcolor="826d77">  <td>21/07/31 17:55:12</td>   <td>-3214</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyQualificationEducation.navigateToEducation()[pri:0, instance:com.maven.testng.VerifyQualificationEducation@604c5de8]">&gt;&gt;navigateToEducation</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@460741164</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/31 17:55:03</td>   <td>-12476</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyQualificationSkills.navigateToSkills()[pri:0, instance:com.maven.testng.VerifyQualificationSkills@5fe1ce85]">&gt;&gt;navigateToSkills</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@460741164</td>   <td></td> </tr>
+<tr bgcolor="826d77">  <td>21/07/31 17:55:14</td>   <td>-1141</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationEducation.verifyAddEducation()[pri:0, instance:com.maven.testng.VerifyQualificationEducation@604c5de8]">verifyAddEducation</td> 
+  <td>main@460741164</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/31 17:55:06</td>   <td>-9328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationSkills.verifyAddSkill(java.lang.String, java.lang.String)[pri:1, instance:com.maven.testng.VerifyQualificationSkills@5fe1ce85]">verifyAddSkill</td> 
+  <td>main@460741164</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/31 17:55:07</td>   <td>-8040</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationSkills.verifyAddSkill(java.lang.String, java.lang.String)[pri:1, instance:com.maven.testng.VerifyQualificationSkills@5fe1ce85]">verifyAddSkill</td> 
+  <td>main@460741164</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/31 17:55:08</td>   <td>-6731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationSkills.verifyAddSkill(java.lang.String, java.lang.String)[pri:1, instance:com.maven.testng.VerifyQualificationSkills@5fe1ce85]">verifyAddSkill</td> 
+  <td>main@460741164</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/31 17:55:09</td>   <td>-5552</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationSkills.verifyAddSkill(java.lang.String, java.lang.String)[pri:1, instance:com.maven.testng.VerifyQualificationSkills@5fe1ce85]">verifyAddSkill</td> 
+  <td>main@460741164</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/31 17:55:11</td>   <td>-4360</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationSkills.verifyAddSkill(java.lang.String, java.lang.String)[pri:1, instance:com.maven.testng.VerifyQualificationSkills@5fe1ce85]">verifyAddSkill</td> 
+  <td>main@460741164</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/31 17:54:55</td>   <td>-19633</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@436bc36]">verifyLoginErrorMessage</td> 
+  <td>main@460741164</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/31 17:54:57</td>   <td>-17889</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@436bc36]">verifyLoginWithCorrectCredentials</td> 
+  <td>main@460741164</td>   <td></td> </tr>
 </table>
